syntax = "proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "LodgeSpotGo.SearchAndFilter.Grpc";
message PhotoDto {
  string photo = 1;
}
message AddressDto {
  string city = 1;
  string country = 2;
  string street = 3;
}
message AccommodationDto {
  string id = 1;
  string name = 2;
  AddressDto location = 3;
  repeated string amenities = 4;
  int32 max_guests = 5;
  int32 min_guests = 6;
  repeated PhotoDto photos = 7;
}
message SearchAccommodationRequest{
  int32 numberOfGuests = 1;
  google.protobuf.Timestamp startDate = 2;
  google.protobuf.Timestamp endDate = 3;
  string city = 4;
  string country = 5;
}
message SearchRequest{
  string numberOfGuests = 1;
  string country = 2;
  string city = 3;
}
message GetAccommodationListResponse {
  repeated AccommodationDto accommodations = 1;
}
